# SWFinal

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
src/analyzer/: mod.rs
src/collector/: mod.rs
src/crypto/: mod.rs
