[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
itertools = "0.12"
ta = "0.5"
strum = { version = "0.26", features = ["derive"] }
sqlite = "0.33"
tempfile = "3.10"
